# Neural-Network-from-Scratch

./: .gitignore  mnist.ipynb  pyproject.toml  xor.ipynb
neuralnet/: losses.py  neural_network.py
neuralnet/layers/: __init__.py  convolutional.py  dense.py  layer.py  reshape.py
neuralnet/layers/activations/: __init__.py  activation.py  activations.py
