[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Rafif Alwafi <tmrafifalwafi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
